--- a/inventory/local/hosts.yaml
+++ b/inventory/local/hosts.yaml
@@ -1,15 +1,15 @@
 all:
   hosts:
     k8s1:
-      ansible_host: <IP_MACHINE_1>
-      ip: <IP_MACHINE_1>
-      access_ip: <IP_MACHINE_1>
-      ansible_user: ubuntu
+      ansible_host: 38.242.213.229
+      ip: 38.242.213.229
+      access_ip: 38.242.213.229
+      ansible_user: root
     k8s2:
-      ansible_host: <IP_MACHINE_2>
-      ip: <IP_MACHINE_2>
-      access_ip: <IP_MACHINE_2>
-      ansible_user: ubuntu
+      ansible_host: 173.249.60.41
+      ip: 173.249.60.41
+      access_ip: 173.249.60.41
+      ansible_user: root
   children:
     kube_control_plane:
       hosts:
